--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos est sunt
+      ullam, culpa dignissimos eveniet fuga recusandae laudantium eligendi
+      nesciunt, voluptas labore mollitia perferendis fugit harum exercitationem
+      sit tempore blanditiis.
+    </p>
+  </body>
 </html>
